[metadata]
name = dirk
version = 0.0.1
author = Khoi Pham
author_email = pckhoi@gmail.com
description = environment-agnostic data pipeline framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pckhoi/dirk
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/pckhoi/dirk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = dirk,dirk/deps,dirk/commands
include_package_data = True
python_requires = >=3.6
install_requires =
    attrs >= 21.4.0
    zope.interface >= 5.4.0
    PyYAML >= 6.0
    requests >= 2.27.1

[options.packages.find]
exclude =
    *_test.py