[metadata]
name = poniard
version = 0.0.4
author = Khoi Pham
author_email = pckhoi@gmail.com
description = data pipeline framework with auto dependency discovery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pckhoi/poniard
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/pckhoi/poniard/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = poniard,poniard/deps,poniard/commands
include_package_data = True
python_requires = >=3.8
install_requires =
    attrs >= 21.4.0
    zope.interface >= 5.4.0
    PyYAML >= 5.3