[metadata]
name = deba
version = 0.1.1
author = Khoi Pham
author_email = pckhoi@gmail.com
description = data pipeline framework with auto dependency discovery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pckhoi/deba
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/pckhoi/deba/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = deba,deba/deps,deba/commands
include_package_data = True
python_requires = >=3.8
install_requires =
    attrs >= 21.4.0
    zope.interface >= 5.4.0
    PyYAML >= 5.3

[options.entry_points]
console_scripts =
    deba = deba.commands:exec